<resources>
    <string name="app_name">My Application</string>
    <string name="username">username</string>
    <string name="name">Name</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="age">age</string>
    <string name="email">Email</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="profile_info">Profile Info</string>
</resources>